# AInki

./: .gitignore  Dockerfile  README.md  chunks_mapping.json  corrected_chunk_maper.py  doc_intelligence.md  docker-compose.yml  main.py  page.json  test.json  test_content_recreation.py  test_neo4j_connection.py
.github/workflows/: dev.yaml
backend/: .dockerignore  Dockerfile  chunks.json  content.txt  doc_intelligence.py  log_info.json  main.py  make_tables.py  mineru.ipynb  mineru.py  pyproject.toml  test.py  test_api.py  view_logs.py
backend/src/: __init__.py  ask.py  chunk_db.py  chunk_maper.py  chunker.py  docs_db.py  file_reader.py  neo4j_connection.py  neo4j_graph.py  object_extractor.py  paths.py  pdf_storage.py  pg_connection.py  pipeline.ipynb  question_maker.py  repetition.py  schema_setup.py  test.ipynb  user_db.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Document.jsx  Login.jsx  Navbar.jsx  PDFViewer.jsx  Quiz.jsx  QuizGenerationModal.jsx  QuizPopup.jsx  Register.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: api.js
src/: ask.py  chunk_db.py  chunker.py  database.py  docs_db.py  neo4j_graph.py  object_extractor.py  pipeline.ipynb  pyproject.toml  repetition.py  save.json  test.ipynb
